# VictoriaVillalobos_EjerciciosparaNocionesClave

./: CMakeLists.txt  README.md
parte 1 y 2/: README.md  estudiante.cpp  estudiante.h  main.cpp  main.h  persona.cpp  persona.h
proyecto 2/: funciones.cpp  funciones.h  main2.cpp  main2.h  matematicas.cpp  matematicas.h  nuevo.cpp  nuevo.h
